# ableton-tools

./: .gitignore  README.md
.claude-plugin/: marketplace.json  plugin.json
ableton-als-files/: SKILL.md
ableton-als-warp/: SKILL.md
ableton-midi-compare/: SKILL.md
ableton-midi-transcribe/: SKILL.md
ableton-shared/: SKILL.md
ableton-shared/references/: source-scripts.md
ableton-shared/src/ableton_tools/: __init__.py  cancel.py  midi.py
ableton-shared/tests/: test_als.py  test_cancel.py  test_midi.py  test_tempo.py
ableton-stem-verify/: SKILL.md
ableton-tempo-drift/: SKILL.md
engine/: CLAUDE.md  pyproject.toml
engine/references/: als-format.md  source-scripts.md
engine/src/ableton_tools/: __init__.py  align.py  als.py  audio.py  cancel.py  cli.py  errors.py  import_stems.py  midi.py  tempo.py  transcribe.py
engine/tests/: conftest.py  test_align.py  test_als.py  test_audio.py  test_cancel.py  test_cli.py  test_import_stems.py  test_midi.py  test_smoke.py  test_tempo.py  test_transcribe.py
skills/als-files/: SKILL.md
skills/als-warp/: SKILL.md
skills/engine/: SKILL.md
skills/midi-compare/: SKILL.md
skills/midi-transcribe/: SKILL.md
skills/stem-verify/: SKILL.md
skills/tempo-drift/: SKILL.md
