[project]
name = "ableton-tools"
version = "0.2.0"
description = "Reusable analysis and .als-editing tools for Ableton projects"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "soundfile>=0.12",
    "librosa>=0.10",
    "mido>=1.3",
]

[project.optional-dependencies]
transcribe = ["basic-pitch>=0.4"]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ableton_tools"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
